[tool.poetry]
name = "sample-agent"
version = "0.1.0"
description = ""
authors = ["George J Padayatti <george.padayatti@igrant.io>"]

[tool.poetry.dependencies]
python = "^3.8"
dexa-sdk = "0.1.12"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
